--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.462.0",
     "react": "^18.3.1",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.3.1",
+    "react-native-svg": "^15.9.0",
+    "react-qr-code": "^2.0.15",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.5.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^3.4.15"
   }
 }
