custom name and tooltips

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
